--- a/Identity_V.css
+++ b/Identity_V.css
@@ -20,11 +20,18 @@ pre {font-family:"courier";
 	font-size: 20px;
 	color:#00aeae;}
 
+img {height: auto;
+    max-width: 100%;}
+
 #header {text-align:center;width:100%;height:100px;background-color:#408080;padding:10px}
 #nav{width:100%;height:40px; background-color:#005757}
 #nav a{float:left;color:#ffffff;text-align:center;padding:14px 16px;text-decoration:none;font-size:18px}
 #article {width:100%;height:1000px;padding: 10px}
 #footer {position:fixed;bottom: 0px;clear:both;width:100%;height:30px;text-align:center;background-color:#003e3e;padding:1em}
 
-.column1{float: left;width: 45%;height:500px;padding: 15px;text-align: center;}
-.column2{float: right;width: 45%;height:500px;padding: 15px;text-align: center;}
+.column{float: left;width: 45%;padding: 15px;text-align: center;}
+
+@media only screen and (max-width: 768px) {.column{width: 100%}}
+@media only screen and (max-width: 480px) {.column{width: 100%}}
+@media only screen and (max-width: 320px) {.column{clear:both;width: 100%}}
+
