--- a/Identity_V.css
+++ b/Identity_V.css
@@ -21,7 +21,7 @@ pre {font-family:"courier";
 	color:#00aeae;}
 
 img {height: auto;
-    max-width: 100%;}
+    max-width:85%;}
 
 #header {text-align:center;width:100%;height:100px;background-color:#408080;padding:10px}
 #nav{width:100%;height:40px; background-color:#005757}
@@ -29,7 +29,7 @@ img {height: auto;
 #article {width:100%;height:1000px;padding: 10px}
 #footer {position:fixed;bottom: 0px;clear:both;width:100%;height:30px;text-align:center;background-color:#003e3e;padding:1em}
 
-.column{float: left;width: 45%;padding: 15px;text-align: center;}
+.column{width: 45%;padding: 15px;text-align: center;}
 
 @media only screen and (max-width: 768px) {.column{width: 100%}}
 @media only screen and (max-width: 480px) {.column{width: 100%}}
